--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -322,7 +322,7 @@
   left: 45%;
   height: 280px;
   width: 115px;
-  background-image: url(/assets/images/nazi.png);
+  background-image: url(assets/images/nazi.png);
   background-position: center;
   background-attachment: local;
   background-size: 70px;
